--- a/cw2_ef/Views/Home/Editors.cshtml
+++ b/cw2_ef/Views/Home/Editors.cshtml
@@ -16,7 +16,10 @@
                 <td>@lp</td>
                 <td>@ed.Name</td>
                 <td>@ed.Address</td>
+                <td><a asp-action="EditEditor" asp-route-id="@ed.Id" class="btn btn-warning">Edytuj</a></td>
+                <td><a asp-action="ConfirmDelete" asp-route-id="@ed.Id" class="btn btn-danger">Usuń</a></td>
             </tr>
         }
     </tbody>
 </table>
+<a asp-action="AddEditor" class="btn btn-primary">Dodaj Wydawce</a>
